# workshop-unittest

./: Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
tests/: auth_test.py  use_case_test.py
unit_test_workshop/: auth.py  use_case.py
