[tool.poetry]
name = "unit-test-workshop"
version = "0.1.0"
description = ""
authors = ["Bar Hochman <bar@bfore.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
